New HTML formatter

--- a/workbench/Rakefile
+++ b/workbench/Rakefile
@@ -23,10 +23,10 @@ end
 
 # run my own features, output in an html report file
 Cucumber::Rake::Task.new(:runreport) do |t|
-  t.cucumber_opts = "--tags ~@example --format html --out #{report_filename}"
+  t.cucumber_opts = "--tags ~@example --format EPBTFormatter --out #{report_filename}"
 end
 
 # run the example features
 Cucumber::Rake::Task.new(:example) do |t|
-  t.cucumber_opts = "--tags @example --format html --out #{report_filename}"
+  t.cucumber_opts = "--tags @example --format EPBTFormatter --out #{report_filename}"
 end
