--- a/workbench/Rakefile
+++ b/workbench/Rakefile
@@ -1,5 +1,5 @@
-# EPBT - SAP Enterprise Portal Behavior Testing
-# http://github.com/arnaud/EPBT  -  MIT License
+# Totori - User Acceptance Testing Workbench
+# http://github.com/arnaud/totori - MIT License
 
 #
 # Rake tasks
@@ -25,7 +25,7 @@ end
 
 # run all my features, output in an html report file
 Cucumber::Rake::Task.new(:runreport) do |t|
-  t.cucumber_opts = "--tags ~@example --format EPBTFormatter --out #{report_filename}"
+  t.cucumber_opts = "--tags ~@example --format TotoriFormatter --out #{report_filename}"
   #File.new(report_filename, "w")
   #Launchy.open("#{Dir.pwd}/#{report_filename}")
 end
@@ -38,14 +38,14 @@ end
 ##Cucumber::Rake::Task.new(:runfeature) do |t|
 #  puts t.profile
 #  exit
-#  t.cucumber_opts = "features/#{arg}.feature --format EPBTFormatter --out #{report_filename}"
+#  t.cucumber_opts = "features/#{arg}.feature --format TotoriFormatter --out #{report_filename}"
 #  #File.new(report_filename, "w")
 #  #Launchy.open("#{Dir.pwd}/#{report_filename}")
 #end
 
 # run the example features
 Cucumber::Rake::Task.new(:example) do |t|
-  t.cucumber_opts = "--tags @example --format EPBTFormatter --out #{report_filename}"
+  t.cucumber_opts = "--tags @example --format TotoriFormatter --out #{report_filename}"
   #File.new(report_filename, "w")
   #Launchy.open("#{Dir.pwd}/#{report_filename}")
 end
