Totori 0.0.1 is out! Now as an eclipse plug-in :)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+.settings
+assets/config/myconfig.yml
+assets/reports/*.html
+assets/reports/screens/*
+bin
 installer/*.zip
 installer/*.exe
 installer/thirdparties/*
-workbench/config/myconfig.yml
-workbench/reports/*.html
-workbench/reports/screens/*
