Working just better

--- a/build.properties
+++ b/build.properties
@@ -3,4 +3,8 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               assets/
+               assets/,\
+               assets/reports/assets/
+bin.excludes = assets/reports/,\
+               assets/config/myconfig.yml,\
+               assets/ext/camstudio/
