--- a/assets/config/myconfig.yml
+++ b/assets/config/myconfig.yml
@@ -1,5 +1,5 @@
 # Totori - User Acceptance Testing Workbench
-# http://github.com/arnaud/totori - MIT License
+# http://github.com/totori/totori - MIT License
 
 #
 # Configuration
